pkg/deployment/testdata/snapshots/simple/state/riser-managed/apps/deployments/myapp/security.istio.io.authorizationpolicy.myapp-healthcheck-deny.yaml
# DO NOT MODIFY! This file was generated by the Riser platform. Changes will be lost
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    riser.dev/revision: "3"
    riser.dev/server-version: 0.0.0-local
  creationTimestamp: null
  labels:
    riser.dev/app: myapp
    riser.dev/deployment: myapp
    riser.dev/environment: dev
  name: myapp-healthcheck-deny
  namespace: apps
spec:
  action: DENY
  rules:
  - to:
    - operation:
        paths:
        - /health
  selector:
    matchLabels:
      riser.dev/deployment: myapp
status: {}
